fix(Send): show error when tx description is too long

--- a/assets/css/modules/_send-receive.scss
+++ b/assets/css/modules/_send-receive.scss
@@ -86,6 +86,9 @@
         right: -10px;
         position: absolute;
       }
+      textarea {
+        margin-left: 0;
+      }
     }
     &.fee {
       button {
